# pfs

./: .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS  README.md  meson.build  meson_options.txt  mobi.phosh.FileSelectorDemo.json  run.in
data/: meson.build  mobi.phosh.FileOpen.desktop.in.in  mobi.phosh.FileSelector.gschema.xml  mobi.phosh.FileSelectorDemo.desktop.in.in  mobi.phosh.FileSelectorDemo.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES.in  POTFILES.skip  de.po  meson.build
src/: application.rs  config.rs  demo-window.ui  demo_application.rs  demo_window.rs  dir-stack.ui  dir-view.ui  dir_stack.rs  dir_view.rs  file-selector.ui  file_selector.rs  grid-item.ui  grid_item.rs  init.rs  lib.rs  meson.build  path-bar.ui  path_bar.rs  pfs.gresource.xml  pfs_demo.rs  places-box.ui  places-item.ui  places_box.rs  places_item.rs  places_item.ui  util.rs  window.rs  window.ui
src/examples/: example.c  meson.build
src/examples/demo/: config.rs  config.rs.in  demo.gresource.xml  demo_application.rs  demo_window.rs  meson.build
src/examples/open/: config.rs  meson.build  pfs_open.rs  pfs_open_application.rs
src/include/: pfs.h
src/stylesheet/: style.css
