[package]
name = "PhoshFileSelector"
version = "0.0.3"
edition = "2021"

[lib]
name = "pfs"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "pfs-demo"
path = "src/examples/demo/pfs_demo.rs"

[[bin]]
name = "pfs-open"
path = "src/examples/open/pfs_open.rs"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib-macros = "0.20.5"
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
